--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,11 +1,9 @@
 version: 2.1
 
-orbs:
-  node: circleci/node@5.0.2
-
 jobs:
   test:
-    executor: node/default
+    docker:
+      - image: cimg/node:19.6.0
     steps:
       - checkout
       - node/install-packages:
@@ -21,7 +19,8 @@ jobs:
           name: Test
 
   build:
-    executor: node/default
+    docker:
+      - image: cimg/node:19.6.0
     steps:
       - checkout
       - node/install-packages:
@@ -31,7 +30,12 @@ jobs:
           name: Build
 
   publish:
+    docker:
+      - image: cimg/node:19.6.0
     steps:
+      - checkout
+      - node/install-packages:
+          pkg-manager: npm
       - run:
           name: Publish to NPM
           command: |
