--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -34,29 +34,29 @@ jobs:
     steps:
       - checkout
       - run:
+          command: npm install
+          name: Install
+      - run:
+          command: npm run build
+          name: Build
+      - run:
           name: publish
           command: |
             npm set //registry.npmjs.org/:_authToken=$NPM_TOKEN
             npm publish
 
 workflows:
-  test-build-publish:
+  test-build:
     jobs:
       - test
       - build:
           requires:
             - test
-      - hold:
-          filters:
-            tags:
-              only: /v[0-9]+(\.[0-9]+)*/
-          type: approval
-          requires:
-            - test
-            - build
-      - publish:
-          filters:
-            tags:
-              only: /v[0-9]+(\.[0-9]+)*/
-          requires:
-            - hold
+
+  publish:
+    - publish:
+        filters:
+          tags:
+            only: /v[0-9]+(\.[0-9]+)*/
+          branches:
+            ignore: /.*/
