--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -54,7 +54,8 @@ workflows:
             - test
 
   publish:
-    - publish:
-        filters:
-        tags:
-          only: /v[0-9]+(\.[0-9]+)*/
+    jobs:
+      - publish:
+          filters:
+          tags:
+            only: /v[0-9]+(\.[0-9]+)*/
